[package]
name = "morse_code_parser"
version = "0.1.1"
authors = ["eyexzy <eyexzy@gmail.com>"]
edition = "2021"
description = "A Morse code parser and decoder implemented in Rust."
repository = "https://https://github.com/eyexzy/morse_code_parser"
documentation = "https://docs.rs/morse_code_parser"
homepage = "https://github.com/eyexzy/morse_code_parser"

keywords = ["morse", "parser", "rust"]
categories = ["text-processing", "parsing"]


[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
# morse_code_parser = { path = "." }
thiserror = "1.0.69"


[badges]
travis-ci = { repository = "eyexzy/morse_code_parser" }
